# mathlib-graph

./: .gitignore  pyproject.toml
docs/: essay.html  index.html
notebooks/: 00_data_exploration.ipynb  01_tactic_vs_term_mode.ipynb  02_docstring_browser.ipynb  03_dag_statistics.ipynb  04_dep_tree.ipynb
pipeline/: build_analysis_db.py  fetch.py  fetch_all_docstrings.py  fetch_docstrings.py  fetch_full_source_deps.py  ingest.py  ingest_term_deps.py  schema.sql
scripts/: dep_depth.py
